<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#FFFFFF">

	<LinearLayout
		android:id="@+id/form_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/headerImage"
			style="@style/HeaderLogo"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/logo_merchant" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="20dp"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/introduction" />

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:background="@color/special_section_background_color"
				android:padding="8dp">

				<TextView
					android:id="@+id/text_client_session_identifier"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/clientSessionIdentifierLabel" />

				<com.onlinepayments.client.android.exampleapp.view.ValidationEditText
					android:id="@+id/client_session_identifier"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/text_client_session_identifier"
					android:inputType="text" />

				<TextView
					android:id="@+id/text_customer_id"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/client_session_identifier"
					android:layout_marginTop="10dp"
					android:text="@string/customerIdentifierLabel" />

				<com.onlinepayments.client.android.exampleapp.view.ValidationEditText
					android:id="@+id/customer_identifier"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/text_customer_id"
					android:inputType="text" />

				<TextView
					android:id="@+id/text_client_api_url"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/customer_identifier"
					android:layout_marginTop="10dp"
					android:text="@string/clientApiUrlLabel" />

				<com.onlinepayments.client.android.exampleapp.view.ValidationEditText
					android:id="@+id/client_api_url"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/text_client_api_url"
					android:inputType="text" />

				<TextView
					android:id="@+id/text_assets_url"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/client_api_url"
					android:layout_marginTop="10dp"
					android:text="@string/assetsUrlLabel" />

				<com.onlinepayments.client.android.exampleapp.view.ValidationEditText
					android:id="@+id/asset_url"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/text_assets_url"
					android:inputType="text" />

				<Button
					android:id="@+id/parse_dialog_btn"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/asset_url"
					android:layout_alignParentEnd="true"
					android:layout_alignParentRight="true"
					android:onClick="parseJsonButtonPressed"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:text="@string/pasteJSON"
					android:textSize="14sp" />

			</RelativeLayout>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/merchantIdentifierLabel" />

			<android.widget.EditText
				android:id="@+id/merchant_identifier"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/merchantNameLabel" />

			<android.widget.EditText
				android:id="@+id/merchant_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/amountLabel" />

			<com.onlinepayments.client.android.exampleapp.view.ValidationEditText
				android:id="@+id/amount"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="number" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/countryCodeLabel" />

			<com.onlinepayments.client.android.exampleapp.view.ValidationEditText
				android:id="@+id/country_code"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/currencyCodeLabel" />

			<com.onlinepayments.client.android.exampleapp.view.ValidationEditText
				android:id="@+id/currency_code"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text" />

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:orientation="horizontal">

				<CheckBox
					android:id="@+id/payment_is_recurring"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/recurringPaymentLabel" />

			</LinearLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:orientation="horizontal">

				<CheckBox
					android:id="@+id/environment_is_production"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/enableProductionLabel"/>

			</LinearLayout>

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:background="@drawable/active_button_background"
				android:onClick="payButtonPressed"
				android:text="@string/payNow"
				android:textColor="#FFFFFF"
				android:textSize="20sp"
				android:textStyle="bold" />

		</LinearLayout>

	</LinearLayout>
</ScrollView>
