<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="400dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_parse_json_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:text="@string/parseJSON_intro" />

    <HorizontalScrollView
        android:id="@+id/hzv_json"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_parse_json_description">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_json"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:fontFamily="monospace"
                android:textSize="12sp"
                android:hint="@string/parseJSON_hint"
                android:importantForAutofill="no"
                android:inputType="none"
                android:minWidth="250dp"
                android:minLines="7" />
        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/text_parse_json_errors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hzv_json"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:gravity="center_horizontal" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_parse_json_errors"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <Button
            android:id="@+id/dismiss_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/parseJSON_dismiss" />

        <Button
            android:id="@+id/parse_json_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/parseJSON_parse" />
    </LinearLayout>

</RelativeLayout>
